config1.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  # auto_host_rewrite: true, Tells envoy to use the hostname of the upstream?
                  auto_host_rewrite: true
                  #host_rewrite_header: "host"
                  #host_rewrite_literal: www.envoyproxy.io
                  cluster: service_echo
          http_filters:
          ## force a particular hostname.  This is the only way I could get TLS upstream to cloud run, to work.
          # - name: envoy.filters.http.lua
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          #     inline_code: |
          #       function envoy_on_request(request_handle)
          #         request_handle:logInfo("orig Authority: "..request_handle:headers():get(":authority"))
          #         request_handle:headers():replace(":authority", 'echo.dchiesa.demo.altostrat.com')
          #         request_handle:logInfo("updated Authority: "..request_handle:headers():get(":authority"))
          #       end
          
          # - name: envoy.filters.http.lua
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
          #     inline_code: |
          #       function envoy_on_request(request_handle)
          #         local service = request_handle:headers():get("service")
          #         local upstream = (service=='service1' and '8eb0-50-35-82-179.ngrok.io' or 'echo.dchiesa.demo.altostrat.com')
          #         request_handle:logInfo("orig Authority: "..request_handle:headers():get(":authority"))
          #         request_handle:headers():replace(":authority", upstream)
          #         request_handle:logInfo("updated Authority: "..request_handle:headers():get(":authority"))
          #       end
          # - name: envoy.filters.http.header_to_metadata
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.filters.http.header_to_metadata.v3.Config
          #     request_rules:
          #       - header: "service"
          #         on_header_present:
          #           metadata_namespace: envoy.lb
          #           key: service
          #           type: STRING
          #         remove: false
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              suppress_envoy_headers: true
  clusters:
  - name: service_echo
    type: STRICT_DNS
    #type: STATIC
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    dns_refresh_rate: 90s

    # ## Trying to get SNI to work the way we expect, different for different hosts
    # typed_extension_protocol_options:
    #   envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    #     "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    #     upstream_http_protocol_options:
    #       auto_sni: true
    #     auto_config: {}
    #     # use_downstream_protocol_config:
    #     #   http_protocol_options:
    #     #     accept_http_10: false
    # ## --end--
    load_assignment:
      cluster_name: service_echo
      endpoints:
      - lb_endpoints:
        - endpoint:
            # ## ---begin---
            # ## Try to get SNI/TLS upstream to work the way I think it should work
            hostname: "echo.dchiesa.demo.altostrat.com"
            # ## ---end---
            address:
              socket_address:
                address: "echo.dchiesa.demo.altostrat.com"
                port_value: 443
          metadata:
            filter_metadata:
              envoy.lb:
                service: "service2"
          load_balancing_weight: 1
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 8eb0-50-35-82-179.ngrok.io
                port_value: 443
          metadata:
            filter_metadata:
              envoy.lb:
                service: "service1"
          load_balancing_weight: 2
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        # ---begin---
        # Attempt to get TLS to work properly
        #max_session_keys: 0
        # ---end---
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: /usr/local/etc/openssl/cert.pem
            # match_typed_subject_alt_names:
            # - san_type: DNS
            #   matcher:
            #     exact: "echo.dchiesa.demo.altostrat.com"
            #     exact: "8eb0-50-35-82-179.ngrok.io"
        #sni: www.envoyproxy.io
        #sni: echo.dchiesa.demo.altostrat.com
